fixed css alignment in user profile

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,6 +16,21 @@
   margin-right: auto;
 }
 
+.booyah-box-user{
+  -webkit-box-shadow:1px 1px 2px 0 #d0d0d0;
+  -moz-box-shadow:1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background:#fff;
+  border:1px solid #ccc;
+  border-color:#e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 0px;
+  margin-bottom: 15px;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
@@ -161,9 +176,22 @@ h1.float-left {
   height: 2px;
   background-color: #495661;
   border: none;
+  float: right;
+  margin-top: 10px;
 }
 
-#member {
-  margin-top: 25px;
-  padding-right: 20px;
+#avatar {
+  text-align: center;
+}
+
+#membersince {
+  margin-bottom: 0%;
+}
+
+#creationtime {
+  margin-left: 15px;
+}
+
+#totalreviews {
+  margin-right: 15px;
 }
